Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h3>
 <a name="observerjs---a-lightweight-pubsub" class="anchor" href="#observerjs---a-lightweight-pubsub"><span class="octicon octicon-link"></span></a>Observer.js - a lightweight pub/sub.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>TODO</p>
 
 <div class="highlight highlight-javascript"><pre><span class="kd">function</span> <span class="nx">log</span><span class="p">(</span><span class="nx">eventName</span><span class="p">)</span> <span class="p">{</span>
     <span class="k">return</span> <span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
