--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <h3>
 <a name="observerjs---a-lightweight-pubsub" class="anchor" href="#observerjs---a-lightweight-pubsub"><span class="octicon octicon-link"></span></a>Observer.js - a lightweight pub/sub.</h3>
 
-<p>TODO</p>
+<p>Observer is a lightweight pub/sub library that can be used as a single event bus or as a base class for easy communications between objects.</p>
+
+<p>To install run 'npm install' then 'grunt'.</p>
 
 <div class="highlight highlight-javascript"><pre><span class="kd">function</span> <span class="nx">log</span><span class="p">(</span><span class="nx">eventName</span><span class="p">)</span> <span class="p">{</span>
     <span class="k">return</span> <span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
