--- a/index.html
+++ b/index.html
@@ -84,7 +84,31 @@
 <ul>
 <li>
 <strong>eventName</strong> - <em>required</em> name of the event you wish to publish.</li>
-</ul><h2>
+</ul><div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">observerInstance</span> <span class="o">=</span> <span class="k">new</span> <span class="nx">Observer</span><span class="p">();</span>
+<span class="nx">observerInstance</span><span class="p">.</span><span class="nx">subscribe</span><span class="p">(</span><span class="s1">'myEvent'</span><span class="p">,</span> <span class="kd">function</span><span class="p">()</span> <span class="p">{</span>
+   <span class="nx">console</span><span class="p">.</span><span class="nx">log</span><span class="p">(</span><span class="nx">myArg1</span><span class="p">,</span> <span class="nx">myArg2</span><span class="p">);</span> <span class="c1">// will log "'foo' 'bar'"</span>
+<span class="p">});</span>
+<span class="nx">observerInstance</span><span class="p">.</span><span class="nx">publish</span><span class="p">(</span><span class="s1">'myEvent'</span><span class="p">,</span> <span class="s1">'foo'</span><span class="p">,</span> <span class="s1">'bar'</span><span class="p">);</span>
+</pre></div>
+
+<h3>
+<a name="unsubscribing-from-an-event" class="anchor" href="#unsubscribing-from-an-event"><span class="octicon octicon-link"></span></a>Unsubscribing from an event</h3>
+
+<p>Subscribe via the <strong>unsubscribe</strong> method which takes two optional arguments. If neither is supplied it will unsubscribe from all events.</p>
+
+<ul>
+<li>
+<strong>eventName</strong> - <em>optional</em> name of the event you wish to unsubscribe from.</li>
+<li>
+<strong>scope</strong> - <em>optional</em> scope of you wish to unsubscribe from.</li>
+</ul><div class="highlight highlight-javascript"><pre><span class="kd">var</span> <span class="nx">observerInstance</span> <span class="o">=</span> <span class="k">new</span> <span class="nx">Observer</span><span class="p">();</span>
+<span class="nx">observerInstance</span><span class="p">.</span><span class="nx">unsubscribe</span><span class="p">(</span><span class="s1">'myEvent'</span><span class="p">);</span> <span class="c1">// unsubscribe to myEvent for all scopes.</span>
+<span class="nx">observerInstance</span><span class="p">.</span><span class="nx">unsubscribe</span><span class="p">(</span><span class="s1">'myEvent'</span><span class="p">,</span> <span class="nb">window</span><span class="p">);</span> <span class="nx">unsubscribe</span> <span class="nx">to</span> <span class="nx">myEvent</span> <span class="k">for</span> <span class="nx">handlers</span> <span class="k">in</span> <span class="nx">the</span> <span class="nb">window</span> <span class="nx">scope</span><span class="p">.</span>
+<span class="nx">observerInstance</span><span class="p">.</span><span class="nx">unsubscribe</span><span class="p">(</span><span class="kc">null</span><span class="p">,</span> <span class="nb">window</span><span class="p">);</span> <span class="nx">unsubscribe</span> <span class="nx">to</span> <span class="nx">all</span> <span class="nx">events</span> <span class="k">for</span> <span class="nx">handlers</span> <span class="k">in</span> <span class="nx">the</span> <span class="nb">window</span> <span class="nx">scope</span><span class="p">.</span>
+<span class="nx">observerInstance</span><span class="p">.</span><span class="nx">unsubscribe</span><span class="p">();</span> <span class="c1">// unsubscribe to all events in all scopes</span>
+</pre></div>
+
+<h2>
 <a name="maintenance" class="anchor" href="#maintenance"><span class="octicon octicon-link"></span></a>Maintenance</h2>
 
 <p>Any issues please contact Jim English (<a href="https://github.com/jimenglish81" class="user-mention">@jimenglish81</a>) or submit a pull request.</p>
